# fastclip

./: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
docs/: additional_recommendations.md  backend_plan.md
src/: App.css  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: analytics.rs  library.rs  mod.rs  settings.rs  video.rs
src-tauri/src/db/: mod.rs  models.rs  queries.rs  schema.rs
src-tauri/src/services/: config.rs  ffmpeg.rs  media_probe.rs  mod.rs
src-tauri/tests/: sync_test.rs
src/components/: ClipCard.tsx  CropPresetSelector.tsx  Dropdown.tsx  EmptyState.tsx  ExportCard.tsx  KeyboardShortcutsOverlay.tsx  Layout.tsx  Modal.tsx  ProgressRing.tsx  SearchBar.tsx  Toast.tsx  URLUpload.tsx  VideoCard.tsx  VideoListRow.tsx
src/components/dashboard/: AIProcessingList.tsx  DashboardHeader.tsx  QuickActions.tsx  RecentProjectsList.tsx  StatsGrid.tsx
src/components/editor/: EditorHeader.tsx  EditorSidebar.tsx  Timeline.tsx  VideoPreview.tsx
src/components/project/: AIScoutHero.tsx  HighlightList.tsx  ProjectHeader.tsx
src/lib/: utils.ts
src/mock/: data.ts
src/pages/: AILabPage.tsx  AnalyticsPage.tsx  DashboardPage.tsx  EditorPage.tsx  ExportPage.tsx  LibraryPage.tsx  ProjectDetailPage.tsx  SettingsPage.tsx
src/store/: aiStore.ts  exportStore.ts  index.ts  projectStore.ts  settingsStore.ts
